# Moonshot-interview-on-call-agent

./: .gitmodules  README.md
on-call-agent/: .env.EXAMPLE  .gitignore  dev_gateway.py  init_data.py  pyproject.toml  readme.md  run_all.bat  run_all.sh
on-call-agent/database/: __init__.py  chroma_store.py  db.py  tokenizer.py
on-call-agent/v1/: html_cleaner.py  readme.md  search.py  server.py
on-call-agent/v2/: chunker.py  readme.md  search.py  semantic.py  server.py
on-call-agent/v3/: __init__.py  agent.py  readme.md  retrieval.py  runtime.py  server.py  test_v3.py  tools.py
on-call-agent/webui/: app.js  index.html  readme.md  styles.css
prompt/: chatgpt_api_plan.md  chatgpt_plan_prompt.md  codex_development.md
